--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
+    "mysql": "^2.12.0",
+    "sequelize": "^3.29.0",
     "serve-favicon": "~2.3.0"
   }
 }
