--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "express-session": "^1.15.5",
+    "fcm-push": "^1.1.3",
     "fs-extra": "^4.0.0",
     "fs.extra": "^1.3.2",
     "morgan": "~1.7.0",
